[package]
name = "rsomics-bam-depth"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Per-base or per-region depth from BAM — Rust port of samtools depth"

[[bin]]
name = "rsomics-bam-depth"
path = "src/main.rs"

[dependencies]
rsomics-common = { path = "../../../foundation/rsomics-common", version = "0.6" }
rsomics-help = { path = "../../../foundation/rsomics-help", version = "0.3" }
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
noodles = { workspace = true, features = ["sam", "bam", "core"] }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
