[package]
name = "rsomics-bam-depth"
version = "0.1.0"
edition = "2024"
rust-version = "1.91"
license = "MIT OR Apache-2.0"
repository = "https://github.com/omics-rust/rsomics-world"
authors = ["Zane Leong <efd@live.com>"]
description = "Per-base or per-region depth from BAM — Rust port of samtools depth"

[[bin]]
name = "rsomics-bam-depth"
path = "src/main.rs"


[lib]
name = "rsomics_bam_depth"
path = "src/lib.rs"
doctest = false
[dependencies]
itoa = "1"
rsomics-common = { version = "0.6" }
rsomics-help = { version = "0.3" }
rsomics-bamio = { version = "0.1" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.7", default-features = false, features = ["cargo_bench_support"] }

[[bench]]
name = "bench"
harness = false
